# ModelSpeedRegister

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
chart/: chartview.cpp  chartview.h
commandstation/: dummycommandstation.cpp  dummycommandstation.h  icommandstation.cpp  icommandstation.h  utils.h
commandstation/backends/: endian.h  z21commandstation.cpp  z21commandstation.h  z21messages.h
input/: dummyspeedsensor.cpp  dummyspeedsensor.h  espanaloghallconfigwidget.cpp  espanaloghallconfigwidget.h  espanaloghallsensor.cpp  espanaloghallsensor.h  ispeedsensor.cpp  ispeedsensor.h
recorder/: idataseries.cpp  idataseries.h  locoinfo.cpp  locoinfo.h  locomotiverecording.cpp  locomotiverecording.h  locospeedcurve.cpp  locospeedcurve.h  rawspeedcurveio.cpp  rawspeedcurveio.h  recordingmanager.cpp  recordingmanager.h
recorder/series/: dataseriescurvemapping.cpp  dataseriescurvemapping.h  movingaverageseries.cpp  movingaverageseries.h  rawsensordataseries.cpp  rawsensordataseries.h  receivedspeedstepseries.cpp  receivedspeedstepseries.h  requestedspeedstepseries.cpp  requestedspeedstepseries.h  sensortravelleddistanceseries.cpp  sensortravelleddistanceseries.h  totalstepaverageseries.cpp  totalstepaverageseries.h
train/: locomotive.cpp  locomotive.h  locomotivepool.cpp  locomotivepool.h  locospeedmapping.cpp  locospeedmapping.h  locostatuswidget.cpp  locostatuswidget.h  train.cpp  train.h  trainspeedtable.cpp  trainspeedtable.h
view/: dataseriesfiltermodel.cpp  dataseriesfiltermodel.h  dataseriesgraph.cpp  dataseriesgraph.h  locomotiverecordingview.cpp  locomotiverecordingview.h  locospeedcurveview.cpp  locospeedcurveview.h  speedcurvetablemodel.cpp  speedcurvetablemodel.h  starttestdlg.cpp  starttestdlg.h  traintab.cpp  traintab.h
